# cfb-picker-backend

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  local_postgres.yml  manage.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: django.yml
accounts/: tests.py  urls.py  views.py
accounts/templates/registration/: login.html
cfbpicker/: asgi.py  settings.py  urls.py  wsgi.py
games/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
games/fixtures/: 2024_season.json
games/migrations/: 0001_initial.py  0002_alter_game_kickoff.py  0003_gameprediction.py  0004_alter_game_location_alter_gameprediction_game_and_more.py
games/templates/: game_detail.html  prediction_disabled.html  prediction_form.html
games/tests/: tests_views.py
games/urls/: site_urls.py
teams/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
teams/fixtures/: initial_teams_data.json
teams/management/commands/: create_fixture.py
teams/migrations/: 0001_initial.py  0002_alter_team_abbreviation_alter_team_conference_and_more.py
teams/templates/: base.html  navbar.html  teams_list.html
teams/tests/: tests_views.py
teams/urls/: api_urls.py  site_urls.py
